--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: mysql:8.0
     restart: always
     ports:
-      - "${DB_PORT_EXT:-3306}:3306"
+      - "${DB_PORT:-3306}:3306"
     volumes:
       - db:/var/lib/mysql
       - ./:/var/www
